[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Levels/SigmaPalace/wall_pallette.png" type="Texture" id=1]
[ext_resource path="res://src/Levels/SigmaPalace/sigma_wall.png" type="Texture" id=2]
[ext_resource path="res://src/Effects/Textures/smoke.png" type="Texture" id=3]
[ext_resource path="res://src/Effects/Materials/mat_smokeparticle.tres" type="Material" id=4]
[ext_resource path="res://src/Effects/Materials/rising_pillar_smoke_particles.tres" type="Material" id=5]
[ext_resource path="res://addons/PaletteSwap/PaletteSwap.gdshader" type="Shader" id=6]
[ext_resource path="res://src/Actors/Bosses/SatanSigma/SigmaWall.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=8]
[ext_resource path="res://src/Sounds/Antonion - Burrow.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/Effects/Materials/sigma_wall_remains.tres" type="Material" id=10]
[ext_resource path="res://src/Effects/Materials/sigma_pillar_end_smoke.tres" type="Material" id=11]
[ext_resource path="res://src/Effects/Textures/remains_gray.png" type="Texture" id=12]
[ext_resource path="res://src/Effects/Materials/sigma_pillar_explosion_particles.tres" type="Material" id=13]
[ext_resource path="res://src/Effects/Textures/green_explosion.png" type="Texture" id=14]
[ext_resource path="res://src/Sounds/EXPLOSION.wav" type="AudioStream" id=15]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/skip_first_row = false
shader_param/use_palette_alpha = false
shader_param/fps = 12.0
shader_param/palette = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.5, 144 )

[sub_resource type="CanvasItemMaterial" id=3]
render_priority = -1
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=210]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[node name="SigmaWall" type="Node2D"]
script = ExtResource( 7 )

[node name="sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -129 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 258 )

[node name="smoke" type="Particles2D" parent="."]
material = ExtResource( 4 )
position = Vector2( -1, 0 )
z_index = 1
amount = 11
lifetime = 0.75
local_coords = false
process_material = ExtResource( 5 )
texture = ExtResource( 3 )

[node name="staticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="staticBody2D"]
position = Vector2( -0.5, -144 )
shape = SubResource( 2 )
disabled = true

[node name="rise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
pitch_scale = 0.8
max_distance = 600.0
bus = "SFX"
script = ExtResource( 8 )

[node name="explosion_remains" type="Particles2D" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -144 )
z_index = 1
emitting = false
amount = 24
lifetime = 1.25
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -155.579, -166.042, 374.663, 485.918 )
local_coords = false
process_material = ExtResource( 10 )
texture = ExtResource( 12 )

[node name="end_smoke" type="Particles2D" parent="."]
material = ExtResource( 4 )
position = Vector2( 10, -147 )
z_index = 16
emitting = false
amount = 24
lifetime = 0.75
local_coords = false
process_material = ExtResource( 11 )
texture = ExtResource( 3 )

[node name="explosions" type="Particles2D" parent="."]
material = SubResource( 210 )
position = Vector2( 14, -100 )
z_index = 20
emitting = false
amount = 32
lifetime = 2.0
local_coords = false
process_material = ExtResource( 13 )
texture = ExtResource( 14 )

[node name="explode_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
max_distance = 600.0
bus = "SFX"
script = ExtResource( 8 )
